# rocqshop-binders-code

./: .gitignore  README.md  dune-project  phantom-names-rocqshop.opam  verified-metaprogramming.opam
cc-meta-theory/: ListUtils.v  Prelude.v  dune
cc-meta-theory/Data/: EvarMap.v  Index.v  Term.v
cc-meta-theory/Theory/: Relations.v
cc-meta-theory/Theory/Conversion/: SubstConversion.v
cc-meta-theory/Theory/Typing/: EvarMapTyping.v
common/: Index.v  Scope.v  Thinnings.v  dune
examples/: CPS.v  Parametricity.v  PiCalculus.v
meta-theory/Data/: All.v  Context.v  EvarMap.v  RedFlags.v  Term.v
meta-theory/Theory/: All.v
meta-theory/Theory/Conversion/: TermConversion.v
meta-theory/Theory/Reduction/: Confluence.v  ContextReduction.v  SubstReduction.v  TermReduction.v
meta-theory/Theory/Typing/: SubstTyping.v  TermTyping.v
sec2-phantom-names/: Index.v  Scope.v  Typeclasses.v  dune
sec3-translations/: CPS.v  Parametricity.v  PiCalculus.v  dune
sec4-stack-reduction-machine/: DeBruijn.v  LocallyNameless.v  LocallyNamelessCofinite.v  PhantomNames.v  dune
sec5-cc-meta-theory/: dune
sec5-cc-meta-theory/Data/: Context.v  Term.v
sec5-cc-meta-theory/Theory/: SigmaCalculus.v
sec5-cc-meta-theory/Theory/Conversion/: All.v  ContextConversion.v
sec5-cc-meta-theory/Theory/Reduction/: All.v
sec5-cc-meta-theory/Theory/Typing/: All.v  BasicProperties.v  SubjectReduction.v
stack-reduction-machine/: DeBruijn.v  LocallyNameless.v  LocallyNamelessCofinite.v
translations/: CPS.v
